--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ layout: default
         {{ post.excerpt }}
       </div>
 
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+
     </article>
   {% endfor %}
 </div>
